--- a/.gitmodules
+++ b/.gitmodules
@@ -3,3 +3,8 @@
 	url = https://github.com/r-universe-org/cran-to-git
 	shallow = true
 	branch = HEAD
+[submodule "covid19india"]
+	path = covid19india
+	url = https://github.com/maxsal/covid19india
+	shallow = true
+	registered = true
